--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -2,7 +2,8 @@
   
   p {
     line-height: 1.45;
-    margin-right: 1.8rem 0;
+    margin-right: 0 0 1.8rem 0;
+    font-weight: 300;
   }
 
   @mixin atSmall {
