--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -8,10 +8,16 @@
 	&--is-expanded {
 		background-color: rgba($mainBlue, .55);
 	}
+
+
 	
 
 	@mixin atMedium {
+		position: fixed;
 		background-color: rgba($mainBlue, .3); 
+		&--dark {
+			background-color: rgba($mainDarkBlue, .85);
+		}
 	}
 
 	&__btn-container {
@@ -28,12 +34,17 @@
 		left: 50%;
 		transform: translateX(-50%) scale(.9);
 		transform-origin: 50% 0;
+		transition: transform .8s ease-out;
 		background-color: $mainBlue;
 		padding: 25px 36px;
 
 	@mixin atMedium {
 		left: auto;
 		transform: translateX(0);
+
+		.site-header--dark & {
+			transform: scale(.56);
+		}
 
 
 	}
